fixes on iphone svg

--- a/static/mainpage/styles/style.css
+++ b/static/mainpage/styles/style.css
@@ -262,6 +262,7 @@ header svg{
   margin-top: 70px;
   width: 350px;
   height:421px;
+  margin-bottom: 50px;
 }
 #banker{
   margin-top: 110px;
